Imported rap into the robolectric respository as submodule robolectric-processor. Refactored to move core into robolectric submodule and robolectric-annotations as common, with robolectric-parent as the parent POM for all submodules.