@@ -9,328 +9,40 @@
   </parent>
 
   <groupId>org.robolectric</groupId>
-  <artifactId>robolectric</artifactId>
-  <version>2.4-SNAPSHOT</version>
-  <packaging>jar</packaging>
-  <name>Robolectric</name>
+  <artifactId>robolectric-parent</artifactId>
+  <version>1.0</version>
+  <packaging>pom</packaging>
+  <name>Robolectric All</name>
   <description>An alternative Android testing framework.</description>
   <url>http://robolectric.org/</url>
 
+  <modules>
+    <module>robolectric</module>
+    <module>robolectric-annotations</module>
+    <module>robolectric-processor</module>
+  </modules>
+  
   <properties>
-      <libsqlite.version>0.282-3</libsqlite.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+
+    <!-- Versions of submodules -->
+    <annotations.version>0.0.1-SNAPSHOT</annotations.version>
+    <processor.version>0.0.1-SNAPSHOT</processor.version>
+    <robolectric.version>2.4-SNAPSHOT</robolectric.version>
+    <android-all.version>4.3_r2-robolectric-0</android-all.version>
+    
+    <!-- Versions of common 3rd-party dependencies -->
+    <mockito.version>1.9.5</mockito.version>
+    <intellij.annotations.version>12.0</intellij.annotations.version>
+    <junit.version>4.8.2</junit.version>
+    <guava.version></guava.version>
+    <hamcrest.version></hamcrest.version>
+    <testng.version></testng.version>
+    <assertj.version></assertj.version>
   </properties>
-
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit-dep</artifactId>
-      <version>4.8.2</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.objenesis</groupId>
-      <artifactId>objenesis</artifactId>
-      <version>1.3</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.almworks.sqlite4java</groupId>
-      <artifactId>sqlite4java</artifactId>
-      <version>0.282</version>
-    </dependency>
-
-    <!-- sqlite native dependencies -->
-    <dependency>
-      <groupId>com.github.axet.litedb</groupId>
-      <artifactId>libsqlite</artifactId>
-      <version>${libsqlite.version}</version>
-      <classifier>natives-windows-x86</classifier>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.github.axet.litedb</groupId>
-      <artifactId>libsqlite</artifactId>
-      <version>${libsqlite.version}</version>
-      <classifier>natives-windows-x86_64</classifier>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.github.axet.litedb</groupId>
-      <artifactId>libsqlite</artifactId>
-      <version>${libsqlite.version}</version>
-      <classifier>natives-mac-x86_64</classifier>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.github.axet.litedb</groupId>
-      <artifactId>libsqlite</artifactId>
-      <version>${libsqlite.version}</version>
-      <classifier>natives-linux-x86</classifier>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.github.axet.litedb</groupId>
-      <artifactId>libsqlite</artifactId>
-      <classifier>natives-linux-x86_64</classifier>
-      <version>${libsqlite.version}</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm</artifactId>
-      <version>5.0.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm-commons</artifactId>
-      <version>5.0.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm-util</artifactId>
-      <version>5.0.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm-analysis</artifactId>
-      <version>5.0.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <version>1.1.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
-      <version>1.3</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>4.0.3</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.ximpleware</groupId>
-      <artifactId>vtd-xml</artifactId>
-      <version>2.11</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.robolectric</groupId>
-      <artifactId>android-all</artifactId>
-      <version>4.3_r2-robolectric-0</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.google.android.maps</groupId>
-      <artifactId>maps</artifactId>
-      <version>18_r3</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.android.support</groupId>
-      <artifactId>support-v4</artifactId>
-      <version>19.0.1</version>
-      <scope>compile</scope>
-      <optional>true</optional>
-    </dependency>
-
-    <dependency>
-      <groupId>org.easytesting</groupId>
-      <artifactId>fest-util</artifactId>
-      <version>1.2.5</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.easytesting</groupId>
-      <artifactId>fest-reflect</artifactId>
-      <version>1.4.1</version>
-      <exclusions>
-        <!-- To resolve conflicts between different transitive dependency to fest-util from from fest-assert-core and fest-reflect -->
-        <exclusion>
-          <groupId>org.easytesting</groupId>
-          <artifactId>fest-util</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-    <dependency>
-      <groupId>org.easytesting</groupId>
-      <artifactId>fest-assert-core</artifactId>
-      <version>2.0M10</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>1.9.5</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.intellij</groupId>
-      <artifactId>annotations</artifactId>
-      <version>12.0</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-ant-tasks</artifactId>
-      <version>2.1.3</version>
-     <!-- This artefact is a kind of jar-with-dependencies already,
-          we don't need any of its dependencies -->
-      <exclusions>
-         <exclusion>
-          <groupId>*</groupId>
-          <artifactId>*</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.ant</groupId>
-      <artifactId>ant</artifactId>
-      <version>1.8.0</version>
-    </dependency>
-  </dependencies>
-
-  <build>
-    <resources>
-        <resource>
-            <directory>target/natives</directory>
-        </resource>
-    </resources>
-
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-          <compilerArgument>-proc:none</compilerArgument>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.bsc.maven</groupId>
-        <artifactId>maven-processor-plugin</artifactId>
-        <version>2.2.1</version>
-        <executions>
-          <execution>
-            <id>process</id>
-            <goals>
-                <goal>process</goal>
-            </goals>
-            <phase>generate-sources</phase>
-          </execution>
-        </executions>
-        <dependencies>
-          <dependency>
-            <groupId>org.robolectric</groupId>
-            <artifactId>rap</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-      
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.13</version>
-        <configuration>
-          <excludes>
-            <exclude>**/Test*.java</exclude>
-          </excludes>
-          <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m</argLine>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.2</version>
-        <configuration>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-        </configuration>
-        <executions>
-          <execution>
-            <id>make-assembly</id>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <!-- required for testing robolectric-sqlite -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.3.1</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>com.googlecode.mavennatives</groupId>
-        <artifactId>maven-nativedependencies-plugin</artifactId>
-        <version>0.0.7</version>
-        <executions>
-            <execution>
-                <id>unpacknatives</id>
-                <phase>generate-resources</phase>
-                <goals>
-                    <goal>copy</goal>
-                </goals>
-            </execution>
-        </executions>
-        <configuration>
-            <separateDirs>true</separateDirs>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <artifactId>maven-clean-plugin</artifactId>
-        <version>2.4.1</version>
-        <configuration>
-          <filesets>
-            <fileset>
-              <directory>tmp</directory>
-              <includes>
-                <include>*</include>
-              </includes>
-            </fileset>
-          </filesets>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
+  
   <scm>
     <url>git@github.com:robolectric/robolectric.git</url>
     <connection>scm:git:git://github.com/robolectric/robolectric.git</connection>
